[design] 회원정보 수정 페이지 css수정

--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -90,6 +90,14 @@
     margin: 5px 0 5px 0;
 }
 
+.orderText {
+    cursor: pointer;
+}
+
+.orderText:hover {
+    text-decoration: underline;
+    font-weight: bold;
+}
 
 
 .addressContainer {
