--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -12,17 +12,29 @@ body {
     font-style: normal;
 }
 
-
 .footer {
-    background-color: #253f39;
+    position: relative;
     color: #ecf0f1;
-    padding: 40px 0;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    z-index: 100;
+    padding-top: 10px;
+    overflow: hidden;
+    width: 100%;
+    height: 150px; 
 }
-  
+
 .footerContent {
+    left: 50%;
     display: flex;
     justify-content: space-between;
+    border-radius: 100%;
+    box-sizing: border-box;
+    background-color: #000;
+    width: 100%;
+    height: 1000px;
+    padding-top: 20px;
 }
   
 .companyInfo,
@@ -35,8 +47,8 @@ body {
     font-weight: bold;
 }
   
-.companyAddress,
-.companyContact,
+.projectTitle,
+.projectMembers,
 .projectTitle {
     margin-top: 10px;
 }
