--- a/src/css/chatbot.module.css
+++ b/src/css/chatbot.module.css
@@ -17,7 +17,7 @@
     right: 50px;
     background-color: white;
     border-radius: 50%;
-    box-shadow: 2px 2px 3px rgb(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 3px rgb(0, 0, 0, 0.2);
 }
 
 .chatbotIconContainer svg {
@@ -46,7 +46,6 @@
     background-color: #85caba;
     border-radius: 6px;
     box-shadow: 5px 5px 3px rgb(0, 0, 0, 0.2);
-    /* overflow-y: scroll; */
 }
 
 .chatbotContainer {
@@ -59,6 +58,7 @@
 
 .chatbotHeader {
     display: flex;
+    flex-shrink: 0;
     justify-content: space-between;
     align-items: center;
     width: 400px;
@@ -94,6 +94,8 @@
 .chatbotBody {
     width: 400px;
     height: 500px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .chatbotChattingBox {
@@ -179,4 +181,35 @@
         left:10px;
         opacity: 1;
     }
+}
+
+/* 질문 및 응답 */
+.questionBox {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.question{
+    background-color: rgb(237, 237, 178);
+    border-radius: 6px;
+    width: fit-content;
+    padding: 5px;
+    position: relative;
+    margin: 10px;
+    right: 10px;
+}
+
+.answerBox {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.answer {
+    background-color: white;
+    border-radius: 6px;
+    width: fit-content;
+    padding: 5px;
+    position: relative;
+    margin: 10px;
+    left: 10px;
 }
