--- a/src/css/profileedit.module.css
+++ b/src/css/profileedit.module.css
@@ -25,6 +25,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center; */
+
     background-color: white;
     border-radius: 16px;
     height: 100%;
@@ -141,4 +142,17 @@
 
 input {
     padding-left: 5px;
+}
+
+.delete {
+    cursor: pointer;
+    position: absolute;
+    right: -10px;
+    top: -15px;
+    width: 75px;
+    height: 30px;
+    border: solid 2px #253f39;
+    background-color: white;
+    border-radius: 10px;
+
 }
