--- a/src/css/chatbot.module.css
+++ b/src/css/chatbot.module.css
@@ -18,6 +18,7 @@
     background-color: white;
     border-radius: 50%;
     box-shadow: 2px 2px 3px rgb(0, 0, 0, 0.2);
+    z-index: 101;
 }
 
 .chatbotIconContainer svg {
@@ -46,6 +47,7 @@
     background-color: white;
     border-radius: 6px;
     box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.05);
+    z-index: 101;
 }
 
 .chatbotContainer {
