[feat]비밀번호 찾기 페이지

--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -5,7 +5,7 @@
 }
 
 .bodys {
-    padding: 40px 275px 40px 275px;
+    padding: 40px 25% 40px 25%;
     width: 100vw;
     height: auto;
     background-color: #253f39;
