[feat]마이페이지 쿠폰 총 개수

--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -182,6 +182,13 @@
     border: solid 3px;
 }
 
+.couponIndex {
+    position: relative;
+    bottom: 31px;
+    left: 95px;
+
+}
+
 .coupon1 {
     position: absolute;
     top: 60px;
