--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -156,19 +156,18 @@ body {
 
 .randomImage {
     position: absolute;
-    width: 300px;
-    height: 380px;
     transition: opacity 0.5s ease-in-out, width 0.5s ease-in-out, height 0.5s ease-in-out;
     animation: mouseImg 3s ease-in-out;
     animation-fill-mode: forwards;
     object-fit: cover;
+    border-radius: 8px;
 }
 
 @keyframes mouseImg {
     0% {
         opacity: 1;
-        width: 350px;
-        height: 405px;
+        width: 280px;
+        height: 325px;
     }
     100% {
         opacity: 0;
