[Design] 크리스마스페이지  할인율 수정

--- a/src/css/christmascoupon.module.css
+++ b/src/css/christmascoupon.module.css
@@ -104,7 +104,7 @@
     font-size: 30px;
     width: 400px;
     height: 70px;
-    background-color: #253F39;
+    background-color: #1E3932;
     color: #F8D7DC;
     border-radius: 6px;
     cursor: pointer;
