[feat]기획전 페이지

--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -98,6 +98,7 @@
 .category {
     margin: 0 7px 0 0;
     color: rgb(183, 163, 97);
+    font-size: 18px;
 
 }
 
@@ -188,4 +189,12 @@
         z-index: -1;
 
     }
+}
+
+.productImg {
+    transition: transform 0.3s ease;
+}
+
+.productImgHover {
+    transform: scale(1.03);
 }
