--- a/src/css/buy.module.css
+++ b/src/css/buy.module.css
@@ -74,11 +74,13 @@
 }
 
 .defaultBox{
-
+    margin-left: 10px;
 }
 
 .default{
-
+    padding: 5px 10px;
+    border: 1px solid #e5e5e5;
+    border-radius: 10px;
 }
 
 .addressInforBox{
