--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -112,7 +112,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    cursor: url('../../public/assets/one.png'), url(two.svg) 5 5, progress;
+    cursor: url('../../public/assets/mouse_cursor_gradient.png') 5 5, progress;
 }
 
 .mouseEvent {
