[Add] 메인페이지 마우스 효과

--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -28,6 +28,7 @@ body {
 .mainSwiper {
     position: relative;
     overflow: hidden;
+    cursor: url('../../public/assets/mouse_cursor_text.png') 5 5, progress;
 }
 
 .slide {
