--- a/src/css/event.module.css
+++ b/src/css/event.module.css
@@ -9,11 +9,14 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
-    gap: 16px;
+    gap: 13px;
     align-items: center;
+    justify-content: center;
     padding-top: 13%;
     padding-bottom: 13%;
     color: aliceblue;
+    width: 1200px;
+    margin: auto;
 }
 
 .demure {
@@ -22,7 +25,8 @@
     text-align: center;
     position: relative;
     align-self: center;
-    font-family: 'MapoDacapo'
+    font-family: 'Monsieur La Doulaise';
+    font-weight: 100;
 }
 
 .demure::after {
@@ -44,9 +48,11 @@
 
 .linkTitle {
     padding: 8px;
-    border-radius: 8px;
+    border-radius: 5px;
     margin-right: 10%;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .linkTitle:nth-child(2) {
@@ -67,6 +73,13 @@
     grid-row: 2;
 }
 
-.linkTitle:active {
-    background-color: rgb(120, 7, 7);
+.linkDiv{
+    width: fit-content;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.linkDiv:hover {
+    background-color: rgb(190, 18, 18);
+    transition: background-color 0.3s ease;
 }
