--- a/src/css/showing.module.css
+++ b/src/css/showing.module.css
@@ -1,6 +1,6 @@
 .bodys {
 
-    padding: 120px 60px 20px 60px;
+    padding: 20px 60px 20px 60px;
     width: auto;
     height: auto;
     background-color: white;
@@ -8,6 +8,21 @@
 
 .header {
     margin: 0 0 20px 0;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+}
+
+.imgBox {
+    position: relative;
+}
+
+.mainImg {
+    cursor: pointer;
+    width: 1250px;
+    height: auto;
+
 }
 
 .contentBox {
@@ -49,4 +64,95 @@
 
 .productImgHover {
     transform: scale(1.03);
+}
+
+
+.circleDiv {
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    opacity: 0.3;
+    width: 35px;
+    height: 35px;
+    border-radius: 30px;
+    border: solid white 1px;
+    transition: opacity 0.4s;
+}
+
+
+
+.circle {
+    background-color: white;
+    width: 15px;
+    height: 15px;
+    border-radius: 30px;
+
+}
+
+.circleDiv:hover {
+    opacity: 0.8;
+
+}
+
+.additionalDiv {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    width: 140px;
+    height: auto;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+    cursor: pointer;
+    z-index: 100;
+}
+
+.circleDiv:hover+.additionalDiv {
+    opacity: 1;
+}
+
+.DivInInfo {
+    width: 115px;
+    margin: 10px
+}
+
+.PN {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.PT {
+    color: rgb(183, 163, 97);
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.PP {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+.DivInShape {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: auto;
+    border-left: solid 2px rgb(207, 207, 207);
+}
+
+.gradient {
+    position: absolute;
+    bottom: 0;
+    width: 1250px;
+    height: 100px;
+    background-color: rgb(189, 57, 57);
+    border: solid 2px rgb(255, 255, 255);
+    color: white;
 }
