[feat] 크리스마스 기획전 마우스 호버 기능

--- a/src/css/showing.module.css
+++ b/src/css/showing.module.css
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     position: relative;
+    width: auto;
 
 }
 
@@ -148,6 +149,7 @@
 }
 
 .gradient {
+    padding: 15px;
     position: absolute;
     bottom: 0;
     width: 1250px;
