--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -9,12 +9,12 @@
 
     width: auto;
     height: auto;
-    background-color: white;
+    background-color: #253f39;
 }
 
 .container1 {
 
-    background-color: white;
+    background-color: #253f39;
     position: relative;
 
 }
@@ -28,12 +28,14 @@
 
 .title {
     font-size: 36px;
+    color: white;
 }
 
 .sort {
     cursor: pointer;
     font-size: 18px;
     margin: 10px 0 0 20px;
+    color: white;
 }
 
 .selectedSort {
@@ -108,6 +110,7 @@
     align-items: center;
     text-align: center;
     font-size: 22px;
+    color: white;
     text-size-adjust: auto;
     height: 45px;
     font-weight: bold;
@@ -122,6 +125,7 @@
 
 .price {
     font-size: 22px;
+    color: white;
 }
 
 .listEndDiv {
@@ -131,7 +135,7 @@
     height: 50px;
     align-items: end;
     justify-content: center;
-    border-top: solid 20px white;
+    border-top: solid 20px #253f39;
     z-index: 2;
 
 }
@@ -139,8 +143,8 @@
 .listEndText {
 
 
-    background-color: white;
-
+    background-color: #253f39;
+    color: white;
     font-size: 20px;
     font-weight: bold;
 
@@ -164,7 +168,7 @@
     height: 50px;
     align-items: end;
     justify-content: center;
-    border-top: solid 20px white;
+    border-top: solid 20px #253f39;
     z-index: 2;
 
 }
@@ -172,8 +176,8 @@
 .listMoreText {
 
     cursor: pointer;
-    background-color: white;
-
+    background-color: #253f39;
+    color: white;
     font-size: 20px;
     font-weight: bold;
 
