--- a/src/css/qna.module.css
+++ b/src/css/qna.module.css
@@ -151,6 +151,16 @@
     justify-content: center;
     align-self: center;
     width: 100%;
+    position: relative;
+}
+
+.inquireTitleNickname {
+    display: flex;
+    align-items: flex-end;
+    position: absolute;
+    height: 30px;
+    right: 0;
+    font-size: 13px;
 }
 
 .inquireMainBox {
