--- a/src/css/qna.module.css
+++ b/src/css/qna.module.css
@@ -156,11 +156,18 @@
 
 .inquireTitleNickname {
     display: flex;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    height: 30px;
-    right: 0;
-    font-size: 13px;
+    width: 23px;
+    height: 23px;
+    right: 275px;
+    bottom: -2px;
+    font-size: 11px;
+    background-color: white;
+    border-radius: 50%;
+    color: black;
+    
 }
 
 .inquireMainBox {
