--- a/src/css/cart.module.css
+++ b/src/css/cart.module.css
@@ -6,7 +6,7 @@
 
 .container {
     width: 100vw;
-    height: auto;
+    height: 100vh;
     background-color: #253f39;
     display: flex;
     flex-direction: column;
