[feat] 목록,검색,주문내역,프로필,기획전 1,2 로딩바

--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -46,7 +46,7 @@
 .container2 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
+    justify-content: center;
 
     @media (max-width : 760px) {
         justify-content: center;
